FPET-759: Fix code smells and improve code coverage